--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,9 @@
             <a class="btn btn-secondary" href="{{ path('app_login') }}">LOGIN</a>
         {% endif %}
 
+        Nav: <a href="{{ path('app_project') }}">Projects</a>
+
+
         {% block body %}{% endblock %}
     </body>
 </html>
