--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -4,29 +4,12 @@
 
 {% block body %}
 
-    <h1>Settings Demo</h1>
+    <h1>{{ systemSettings.tagline }}
+        <span class="badge info">{{ systemSettings.version }}</span>
+    </h1>
 
-    <div class="row">
-        <div class="col-sm-12">
-        {% for project in projects %}
-            [[
-            {% if currentProject is not null and project.id == currentProject.id %}
-               ---
-            {% else %}
-                 <a href="{{ path('app_homepage', { project: project.id }) }}">
-            {% endif %}
-
-            {{ project.name }} ({{ project.owner }})
-
-             {% if currentProject is not null and project.id == currentProject.id %}
-                 ---
-             {% else %}
-                 </a>
-             {% endif %}
-             ]]
-        {% endfor %}
-        </div>
-    </div>
+    Nav: <a href="{{ path('app_project') }}">Projects</a>
+        {{ dump(collectionSettings) }}
     <div class="row">
         {% for collection, classSettings in collectionSettings %}
             {% for settingsDef in classSettings %}
@@ -34,35 +17,41 @@
                 <div class="col-md-4">
                     <div class="card">
 
-                <h3 class="card-title">{{ settingsDef.class }}</h3>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Var</th>
-                        <th>Value</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for var,val in settingsDef.settings %}
-                        <tr>
-                            <td>{{ var }}</td>
-                            <td>{{ val is iterable ? val|json_encode : val }}</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+                        <h3 class="card-title">{{ settingsDef.class }}</h3>
+                        <div>
+                            {{ settingsDef.class|trans }}
+                        </div>
 
-                <button>
-                    <a href="{{ path(settingsDef.route, settingsDef.routeParams) }}">
-                            Edit {{ settingsDef.class }}
-                    </a>
-                </button>
-                </div>
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th>Var</th>
+                                <th>Value</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for var,val in settingsDef.settings %}
+                                <tr>
+                                    <td>{{ var }}</td>
+                                    <td>{{ val is iterable ? val|json_encode : val }}</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                        {% if is_granted('ROLE_USER') %}
+                            {{ dump(settingsDef) }}
+                            <button>
+                                <a href="{{ path(settingsDef.route, settingsDef.routeParams) }}">
+                                    Edit {{ settingsDef.class }}
+                                </a>
+                            </button>
+                        {% endif %}
+                    </div>
                 </div>
             {% endfor %}
         {% endfor %}
-
     </div>
+
 
 
 {% endblock %}
