--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -3,45 +3,21 @@
 {% block title %}Hello ProjectController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
     <h1>Hello {{ app.user ? app.user : 'Visitor' }}! ✅</h1>
-    <div class="row">
-        <div class="col-sm-12">
-            {% for project in projects %}
-                [[
-                {% if currentProject is not null and project.id == currentProject.id %}
-                    ---
-                {% else %}
-                    <a href="{{ path('app_homepage', { project: project.id }) }}">
-                {% endif %}
 
-                {{ project.name }} ({{ project.owner }})
+    {% set columns = [
+        'id',
+        'name',
+        'owner'
+    ] %}
+    <twig:simple_datatables :data="projects" :columns="columns">
+        <twig:block name="name">
+            <a href="{{ path('app_homepage', { project: row.id }) }}">
+{#            <a href="{{ path('project_show', {id:row.id}) }}">#}
+                                {{ row.name }}
+                            </a>
 
-                {% if currentProject is not null and project.id == currentProject.id %}
-                    ---
-                {% else %}
-                    </a>
-                {% endif %}
-                ]]
-            {% endfor %}
-        </div>
-    </div>
+        </twig:block>
 
-    <h3>Projects</h3>
-    <ul>
-        {% for project in projects %}
-            <li>
-{#                <a href="{{ path('project_show', ) }}"#}
-                {{ project.name }}
-            </li>
-        {% endfor %}
-        <li>Your controller at <code><a href="{{ '/home/tac/survos/demos/settings-bundle-demo/src/Controller/ProjectController.php'|file_link(0) }}">src/Controller/ProjectController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/tac/survos/demos/settings-bundle-demo/templates/project/index.html.twig'|file_link(0) }}">templates/project/index.html.twig</a></code></li>
-    </ul>
-</div>
+    </twig:simple_datatables>
 {% endblock %}
