--- a/templates/app/login.html.twig
+++ b/templates/app/login.html.twig
@@ -6,7 +6,7 @@
     {% endif %}
 
     <p>
-        Example users are alice, bob and carlos
+        Example users are alice, bob and carlos, only 'alice' has ROLE_ADMIN permissions.
     </p>
 
     <form action="{{ path('app_login') }}" method="post">
