--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
             <a class="btn btn-secondary" href="{{ path('app_login') }}">LOGIN</a>
         {% endif %}
 
-        Nav: <a href="{{ path('app_project') }}">Projects</a>
+        Nav: <a href="{{ path('app_projects') }}">Projects</a>
 
 
         {% block body %}{% endblock %}
